--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 </head>
 
-<body onload="generateNavigationBar();">
+<body onload="init();">
 
     <!-- Navigation -->
     <nav id="navBar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -49,7 +49,9 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"></div>
+                <!--<img class="img-responsive img-portfolio img-hover" src="img/Team.jpg" alt="">-->
+                <img src="img/Team.jpg" alt="">
+                <!--<div class="fill" style="background-image:url('img/Team.jpg');"></div>-->
                 <div class="carousel-caption">
                     <h2>Caption 1</h2>
                 </div>
@@ -80,11 +82,16 @@
     <!-- Page Content -->
     <div class="container">
 
-        <!-- Marketing Icons Section -->
+        <div class="col-lg-12">
+            <h1 class="page-header">
+                University of Waterloo's Varsity Squash 
+            </h1>
+        </div>
+<!--
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Welcome to Modern Business
+                    University of Waterloo's Varsity Squash 
                 </h1>
             </div>
             <div class="col-md-4">
@@ -121,9 +128,7 @@
                 </div>
             </div>
         </div>
-        <!-- /.row -->
 
-        <!-- Portfolio Section -->
         <div class="row">
             <div class="col-lg-12">
                 <h2 class="page-header">Portfolio Heading</h2>
@@ -159,9 +164,7 @@
                 </a>
             </div>
         </div>
-        <!-- /.row -->
 
-        <!-- Features Section -->
         <div class="row">
             <div class="col-lg-12">
                 <h2 class="page-header">Modern Business Features</h2>
@@ -183,11 +186,9 @@
                 <img class="img-responsive" src="http://placehold.it/700x450" alt="">
             </div>
         </div>
-        <!-- /.row -->
 
         <hr>
 
-        <!-- Call to Action Section -->
         <div class="well">
             <div class="row">
                 <div class="col-md-8">
@@ -198,7 +199,7 @@
                 </div>
             </div>
         </div>
-
+-->
         <hr>
 
         <!-- Footer -->
