Updating team photo url to upper case extenstion

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
         <!-- Intro Content -->
         <div class="row">
             <div class="col-md-6">
-                <img class="img-responsive" src="img/Team.jpg" alt="">
+                <img class="img-responsive" src="img/Team.JPG" alt="">
             </div>
             <div class="col-md-6">
                 <h2>UW Varsity Squash Team</h2>
