--- a/about.html
+++ b/about.html
@@ -43,8 +43,7 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">About
-                    <small>Subheading</small>
+                <h1 class="page-header">About Us
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
