--- a/contact.html
+++ b/contact.html
@@ -58,137 +58,67 @@
         <!-- Content Row -->
         <div class="row">
             <!-- Map Column -->
-            <div class="col-md-8">
+            <div class="col-md-12">
+                <h3>Contact Our Team</h3>
+                <br>
+                <div class="row"></div>
+
+            <div class="col-md-3"> 
+                <div class="thumbnail">            
+                    <p>Cameron Seth (Men's Captain)</p>
+                    <p><i class="fa fa-phone"></i> 
+                        <abbr title="Phone">P</abbr>: (123) 456-7890</p>
+                    <p><i class="fa fa-envelope-o"></i> 
+                        <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
+                    </p>
+                </div>                             
+            </div>                             
+            <div class="col-md-3"> 
+                <div class="thumbnail">            
+                    <p>Hussein Salemwalla (Men's Captain)</p>
+                    <p><i class="fa fa-phone"></i> 
+                        <abbr title="Phone">P</abbr>: (123) 456-7890</p>
+                    <p><i class="fa fa-envelope-o"></i> 
+                        <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
+                    </p>
+                </div>                             
+            </div>                             
+            <div class="col-md-3"> 
+                <div class="thumbnail">            
+                    <p>Grace Leung (Women's Captain)</p>
+                    <p><i class="fa fa-phone"></i> 
+                        <abbr title="Phone">P</abbr>: (123) 456-7890</p>
+                    <p><i class="fa fa-envelope-o"></i> 
+                        <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
+                    </p>
+                </div>                             
+            </div>                             
+            <div class="col-md-3"> 
+                <div class="thumbnail">            
+                    <p>Marisa Seth (Women's Captain)</p>
+                    <p><i class="fa fa-phone"></i> 
+                        <abbr title="Phone">P</abbr>: (123) 456-7890</p>
+                    <p><i class="fa fa-envelope-o"></i> 
+                        <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
+                    </p>
+                </div>                             
+            </div>                             
+            <div class="col-md-3"> 
+                <div class="thumbnail">            
+                    <p>Vinit Kudva (Head-Coach)</p>
+                    <p><i class="fa fa-phone"></i> 
+                        <abbr title="Phone">P</abbr>: (123) 456-7890</p>
+                    <p><i class="fa fa-envelope-o"></i> 
+                        <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
+                    </p>
+                </div>                             
+            </div>                             
                 <div id="googlemap">
                      <!-- Generate the map after the page loads -->
                 </div>
-                <h3>Send us a Message</h3>
-                <form name="sentMessage" id="contactForm" novalidate>
-                    <div class="control-group form-group">
-                        <div class="controls">
-                            <label>Full Name:</label>
-                            <input type="text" class="form-control" id="name" required data-validation-required-message="Please enter your name.">
-                            <p class="help-block"></p>
-                        </div>
-                    </div>
-                    <div class="control-group form-group">
-                        <div class="controls">
-                            <label>Phone Number:</label>
-                            <input type="tel" class="form-control" id="phone" required data-validation-required-message="Please enter your phone number.">
-                        </div>
-                    </div>
-                    <div class="control-group form-group">
-                        <div class="controls">
-                            <label>Email Address:</label>
-                            <input type="email" class="form-control" id="email" required data-validation-required-message="Please enter your email address.">
-                        </div>
-                    </div>
-                    <div class="control-group form-group">
-                        <div class="controls">
-                            <label>Message:</label>
-                            <textarea rows="10" cols="100" class="form-control" id="message" required data-validation-required-message="Please enter your message" maxlength="999" style="resize:none"></textarea>
-                        </div>
-                    </div>
-                    <div id="success"></div>
-                    <!-- For success/fail messages -->
-                    <button type="submit" class="btn btn-primary">Send Message</button>
-                </form>
             </div>
             <!-- Contact Details Column -->
-            <div class="col-md-4">
-                <h3>Contact Our Team</h3>
-                <br>
-                <p>Cameron Seth (Men's Captain)</p>
-                <p><i class="fa fa-phone"></i> 
-                    <abbr title="Phone">P</abbr>: (123) 456-7890</p>
-                <p><i class="fa fa-envelope-o"></i> 
-                    <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
-                </p>
-                <br>
-                <p>Hussein Salemwalla (Men's Captain)</p>
-                <p><i class="fa fa-phone"></i> 
-                    <abbr title="Phone">P</abbr>: (123) 456-7890</p>
-                <p><i class="fa fa-envelope-o"></i> 
-                    <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
-                </p>
-                <br>
-                <p>Grace Leung (Women's Captain)</p>
-                <p><i class="fa fa-phone"></i> 
-                    <abbr title="Phone">P</abbr>: (123) 456-7890</p>
-                <p><i class="fa fa-envelope-o"></i> 
-                    <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
-                </p>
-                <br>
-                <p>Marisa Seth (Women's Captain)</p>
-                <p><i class="fa fa-phone"></i> 
-                    <abbr title="Phone">P</abbr>: (123) 456-7890</p>
-                <p><i class="fa fa-envelope-o"></i> 
-                    <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
-                </p>
-                <br>
-                <p>Vinit Kudva (Head-Coach)</p>
-                <p><i class="fa fa-phone"></i> 
-                    <abbr title="Phone">P</abbr>: (123) 456-7890</p>
-                <p><i class="fa fa-envelope-o"></i> 
-                    <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
-                </p>
-                <!--<ul class="list-unstyled list-inline list-social-icons">-->
-                    <!--<li>-->
-                        <!--<a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                        <!--<a href="#"><i class="fa fa-linkedin-square fa-2x"></i></a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                        <!--<a href="#"><i class="fa fa-twitter-square fa-2x"></i></a>-->
-                    <!--</li>-->
-                    <!--<li>-->
-                        <!--<a href="#"><i class="fa fa-google-plus-square fa-2x"></i></a>-->
-                    <!--</li>-->
-                <!--</ul>-->
-            </div>
         </div>
-        <!-- /.row -->
-
-        <!-- Contact Form -->
-        <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
-        <!--<div class="row">-->
-            <!--<div class="col-md-8">-->
-                <!--<h3>Send us a Message</h3>-->
-                <!--<form name="sentMessage" id="contactForm" novalidate>-->
-                    <!--<div class="control-group form-group">-->
-                        <!--<div class="controls">-->
-                            <!--<label>Full Name:</label>-->
-                            <!--<input type="text" class="form-control" id="name" required data-validation-required-message="Please enter your name.">-->
-                            <!--<p class="help-block"></p>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="control-group form-group">-->
-                        <!--<div class="controls">-->
-                            <!--<label>Phone Number:</label>-->
-                            <!--<input type="tel" class="form-control" id="phone" required data-validation-required-message="Please enter your phone number.">-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="control-group form-group">-->
-                        <!--<div class="controls">-->
-                            <!--<label>Email Address:</label>-->
-                            <!--<input type="email" class="form-control" id="email" required data-validation-required-message="Please enter your email address.">-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div class="control-group form-group">-->
-                        <!--<div class="controls">-->
-                            <!--<label>Message:</label>-->
-                            <!--<textarea rows="10" cols="100" class="form-control" id="message" required data-validation-required-message="Please enter your message" maxlength="999" style="resize:none"></textarea>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--<div id="success"></div>-->
-                    <!--[> For success/fail messages <]-->
-                    <!--<button type="submit" class="btn btn-primary">Send Message</button>-->
-                <!--</form>-->
-            <!--</div>-->
-
-        <!--</div>-->
-        <!-- /.row -->
 
         <hr>
 
