--- a/roster.html
+++ b/roster.html
@@ -59,6 +59,9 @@
         
         <div class="row">
             <!-- Nav tabs -->
+            <!--<div class="col-lg-12">-->
+                <!--<h2 class="page-header">Our Team</h2>-->
+            <!--</div>-->
             <ul class="nav nav-tabs" role="tablist">
                 <li class="active"><a href="#mensRoster" role="tab" data-toggle="tab">Men's Roster</a></li>
                 <li><a href="#womensRoster" role="tab" data-toggle="tab">Women's Roster</a></li>
