Fixing content on home

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 <ul>
                     <li><a href="drillday.html">Drill</a> and <a href="matchday.html">Match</a> day schedule for October now available.</li>
                     <li>Sample sweaters and T-shirts are with Cameron. Try them on to determine your sizing.</li>
+                    <li>More news...</li>
                 </ul>
                 <h3>
                     Upcoming Events 
@@ -62,7 +63,7 @@
                     <li>October 25: Women's BK9 @ University of Toronto</li>
                     <li>October 26: Rookie Night</li>
                     <li>October 31 - November 2: West Sectionals @ Waterloo (Northfield)</li>
-                    <li>November 16 - KW Racquets Event</li>
+                    <li>November 16: KW Racquets Event</li>
                 </ul>
             </div>
         </div>
