Updating background and main page look

--- a/index.html
+++ b/index.html
@@ -36,51 +36,82 @@
     <nav id="navBar" class="navbar navbar-inverse navbar-fixed-top navBarBackground" role="navigation">
     <!-- Populated in Javascript -->
     </nav>
-    <div>
-        <img src="img/banner-comb.png" class="banner" alt="">
-    </div>
 
     <!-- Page Content -->
     <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">
-                    University of Waterloo's Varsity Squash 
-                </h1>
-                <h3>
-                    News
-                </h3>
-                <ul>
-                    <li><a href="drillday.html">Drill</a> and <a href="matchday.html">Match</a> day schedule for October now available.</li>
-                    <li>Sample sweaters and T-shirts are with Cameron. Try them on to determine your sizing.</li>
-                    <li>More news...</li>
-                </ul>
-                <h3>
-                    Upcoming Events 
-                </h3>
-                <ul>
-                    <li>October 18: Men's BK9 @ University of Toronto</li>
-                    <li>October 25: Women's BK9 @ University of Toronto</li>
-                    <li>October 26: Rookie Night</li>
-                    <li>October 31 - November 2: West Sectionals @ Waterloo (Northfield)</li>
-                    <li>November 16: KW Racquets Event</li>
-                </ul>
-            </div>
-        </div>
-        <hr>
-
-        <!-- Footer -->
-        <footer>
+            <div class="box box-banner">
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <div>
+                        <img src="img/banner-comb.png" class="banner" alt="">
+                    </div>
+                    <h2 class="intro-text text-center">
+                        University of Waterloo's Varsity Squash 
+                    </h2>
                 </div>
             </div>
-        </footer>
+        </div>
+        
+        <div class="box">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="box-content">
+                        <hr>
+                        <h2 class="intro-text text-center">Men's Squash Team wins Black Knight Tournament
+                        </h2>
+                        <hr>
+                        <p>The Men's Squash team competed in the Black Knight 9 Player Tournament this past weekend at the University of Toronto. The Warriors were looking to improve on their 4th place finish from last year at this event.
+                        <p>The Warriors cruised past Guelph in the semi-finals, winning 9-0 without dropping a single game in the matchup. Rookies Taran Ravindran, Blake Reinson, Shrinu Kushagra and Mike Yetisir all saw their first action representing Waterloo.
+                        <p>In the finals, the black and gold faced a strong University of Toronto squad. The Warriors had a slow start, losing close matches at position 6, 7 and 8. However, veterans Hussein Salemwalla (Maple), Diego Caballero (Bucamaranga) and Cameron Seth (Fergus) gained crucial wins to tie up the match. Wins from Ben Sinai, Taran Ravindran and Blake Reinson settled the match, giving the Warriors a 6-3 victory.
+                        <p>Next up for the squash team is the Women's BK9 taking place this weekend, followed by the West Sectional's on November 1-2.
+                    </div>
+                </div>
+            </div>
+        </div>
 
+        <div class="box">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="box-content">
+                        <hr>
+                        <h2 class="intro-text text-center">News
+                        </h2>
+                        <hr>
+                        <h4>
+                            Website Updates
+                        </h4>
+                        <ul>
+                            <li><a href="drillday.html">Drill</a> and <a href="matchday.html">Match</a> day schedule for October now available.</li>
+                            <li>Sample sweaters and T-shirts are with Cameron. Try them on to determine your sizing.</li>
+                            <li>More news...</li>
+                        </ul>
+                        <h4>
+                            Upcoming Events 
+                        </h4>
+                        <ul>
+                            <li>October 18: Men's BK9 @ University of Toronto</li>
+                            <li>October 25: Women's BK9 @ University of Toronto</li>
+                            <li>October 26: Rookie Night</li>
+                            <li>October 31 - November 2: West Sectionals @ Waterloo (Northfield)</li>
+                            <li>November 16: KW Racquets Event</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- /.container -->
 
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <p>Copyright &copy; Your Website 2014</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
