--- a/contact.html
+++ b/contact.html
@@ -40,93 +40,92 @@
 
     <!-- Page Content -->
     <div class="container">
-
-        <!-- Page Heading/Breadcrumbs -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Contact
-                </h1>
-                <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
-                    </li>
-                    <li class="active">Contact</li>
-                </ol>
+        <div class="box box-banner">
+            <!-- Page Heading/Breadcrumbs -->
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2 class="intro-text text-center">
+                        Contact Us
+                    </h2>
+                </div>
+            </div>
+            <!-- /.row -->
+        </div>
+        <div class="box">
+            <!-- Content Row -->
+            <div class="row">
+                <div class="col-md-12">
+                    <br>
+                    <div class="col-md-3"> 
+                        <div class="thumbnail">            
+                            <p>Cameron Seth (Men's Captain)</p>
+                            <p><i class="fa fa-phone"></i> 
+                                <abbr title="Phone">P</abbr>: (123) 456-7890</p>
+                            <p><i class="fa fa-envelope-o"></i> 
+                                <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
+                            </p>
+                        </div>                             
+                    </div>                             
+                    <div class="col-md-3"> 
+                        <div class="thumbnail">            
+                            <p>Hussein Salemwalla (Men's Captain)</p>
+                            <p><i class="fa fa-phone"></i> 
+                                <abbr title="Phone">P</abbr>: (123) 456-7890</p>
+                            <p><i class="fa fa-envelope-o"></i> 
+                                <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
+                            </p>
+                        </div>                             
+                    </div>                             
+                    <div class="col-md-3"> 
+                        <div class="thumbnail">            
+                            <p>Grace Leung (Women's Captain)</p>
+                            <p><i class="fa fa-phone"></i> 
+                                <abbr title="Phone">P</abbr>: (123) 456-7890</p>
+                            <p><i class="fa fa-envelope-o"></i> 
+                                <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
+                            </p>
+                        </div>                             
+                    </div>                             
+                    <div class="col-md-3"> 
+                        <div class="thumbnail">            
+                            <p>Marisa Seth (Women's Captain)</p>
+                            <p><i class="fa fa-phone"></i> 
+                                <abbr title="Phone">P</abbr>: (123) 456-7890</p>
+                            <p><i class="fa fa-envelope-o"></i> 
+                                <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
+                            </p>
+                        </div>                             
+                    </div>                             
+                    <div class="col-md-3"> 
+                        <div class="thumbnail">            
+                            <p>Vinit Kudva (Head-Coach)</p>
+                            <p><i class="fa fa-phone"></i> 
+                                <abbr title="Phone">P</abbr>: (123) 456-7890</p>
+                            <p><i class="fa fa-envelope-o"></i> 
+                                <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
+                            </p>
+                        </div>                             
+                    </div>                             
+                </div>
             </div>
         </div>
-        <!-- /.row -->
-
-        <!-- Content Row -->
-        <div class="row">
-            <!-- Map Column -->
-            <div class="col-md-12">
-                <h3>Contact Our Team</h3>
-                <br>
-                <div class="row"></div>
-
-            <div class="col-md-3"> 
-                <div class="thumbnail">            
-                    <p>Cameron Seth (Men's Captain)</p>
-                    <p><i class="fa fa-phone"></i> 
-                        <abbr title="Phone">P</abbr>: (123) 456-7890</p>
-                    <p><i class="fa fa-envelope-o"></i> 
-                        <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
-                    </p>
-                </div>                             
-            </div>                             
-            <div class="col-md-3"> 
-                <div class="thumbnail">            
-                    <p>Hussein Salemwalla (Men's Captain)</p>
-                    <p><i class="fa fa-phone"></i> 
-                        <abbr title="Phone">P</abbr>: (123) 456-7890</p>
-                    <p><i class="fa fa-envelope-o"></i> 
-                        <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
-                    </p>
-                </div>                             
-            </div>                             
-            <div class="col-md-3"> 
-                <div class="thumbnail">            
-                    <p>Grace Leung (Women's Captain)</p>
-                    <p><i class="fa fa-phone"></i> 
-                        <abbr title="Phone">P</abbr>: (123) 456-7890</p>
-                    <p><i class="fa fa-envelope-o"></i> 
-                        <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
-                    </p>
-                </div>                             
-            </div>                             
-            <div class="col-md-3"> 
-                <div class="thumbnail">            
-                    <p>Marisa Seth (Women's Captain)</p>
-                    <p><i class="fa fa-phone"></i> 
-                        <abbr title="Phone">P</abbr>: (123) 456-7890</p>
-                    <p><i class="fa fa-envelope-o"></i> 
-                        <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
-                    </p>
-                </div>                             
-            </div>                             
-            <div class="col-md-3"> 
-                <div class="thumbnail">            
-                    <p>Vinit Kudva (Head-Coach)</p>
-                    <p><i class="fa fa-phone"></i> 
-                        <abbr title="Phone">P</abbr>: (123) 456-7890</p>
-                    <p><i class="fa fa-envelope-o"></i> 
-                        <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
-                    </p>
-                </div>                             
-            </div>                             
+        <div class="box">
+            <div class="row">
                 <div id="googlemap">
                      <!-- Generate the map after the page loads -->
                 </div>
             </div>
-            <!-- Contact Details Column -->
         </div>
 
         <hr>
 
         <!-- Footer -->
         <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <p>Copyright &copy; Your Website 2014</p>
+                    </div>
                 </div>
             </div>
         </footer>
