--- a/roster.html
+++ b/roster.html
@@ -41,48 +41,41 @@
 
     <!-- Page Content -->
     <div class="container">
-
-        <!-- Page Heading/Breadcrumbs -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Roster
-                    <small></small>
-                </h1>
-                <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
-                    </li>
-                    <li class="active">Roster</li>
-                </ol>
+        <div class="box box-banner">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2 class="intro-text text-center">
+                        Roster
+                    </h2>
+                </div>
             </div>
+            <!-- /.row -->
         </div>
-        <!-- /.row -->
-        
-        <div class="row">
-            <!-- Nav tabs -->
-            <!--<div class="col-lg-12">-->
-                <!--<h2 class="page-header">Our Team</h2>-->
-            <!--</div>-->
-            <ul class="nav nav-tabs" role="tablist">
-                <li class="active"><a href="#mensRoster" role="tab" data-toggle="tab">Men's Roster</a></li>
-                <li><a href="#womensRoster" role="tab" data-toggle="tab">Women's Roster</a></li>
-            </ul>
+        <div class="box">
+            <div class="row">
+                <ul class="nav nav-tabs" role="tablist">
+                    <li class="active"><a href="#mensRoster" role="tab" data-toggle="tab">Men's Roster</a></li>
+                    <li><a href="#womensRoster" role="tab" data-toggle="tab">Women's Roster</a></li>
+                </ul>
 
-            <!-- Tab panes -->
-            <div class="tab-content">
-                <div class="tab-pane fade in active" id="mensRoster"><!-- Populated in Javascript --></div>
-                <div class="tab-pane fade" id="womensRoster"><!-- Populated in Javascript --></div>
+                <!-- Tab panes -->
+                <div class="tab-content">
+                    <div class="tab-pane fade in active" id="mensRoster"><!-- Populated in Javascript --></div>
+                    <div class="tab-pane fade" id="womensRoster"><!-- Populated in Javascript --></div>
+                </div>
             </div>
+            <!-- /.row -->
         </div>
-        <!-- /.row -->
-
         <!-- Horizontal Rule -->
         <hr>
 
         <!-- Footer -->
         <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <p>Copyright &copy; Your Website 2014</p>
+                    </div>
                 </div>
             </div>
         </footer>
