added match day results link. And small format difference in schedule link

--- a/drillday.html
+++ b/drillday.html
@@ -55,8 +55,9 @@
             <!-- Intro Content -->
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Go to this link to see the schedule:</p>
-                    <a href="https://docs.google.com/spreadsheets/d/17KTkEiwTsPPwAV5LjT7IRC-R65GcAB7tI_WjdHeDRIg/edit?usp=sharing">Schedule</a>
+                    <p>Go to this link to see the schedule:
+                        <a href="https://docs.google.com/spreadsheets/d/17KTkEiwTsPPwAV5LjT7IRC-R65GcAB7tI_WjdHeDRIg/edit?usp=sharing">Schedule</a>
+                    </p>
                 </div>
             </div>
             <!-- /.row -->
