Changing banner format to reduce file size

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div>
-                        <img src="img/banner-comb.png" class="banner" alt="">
+                        <img src="img/banner-comb.jpg" class="banner" alt="">
                     </div>
                     <h2 class="intro-text text-center">
                         University of Waterloo's Varsity Squash 
