resized mike's image after extension fix

--- a/roster.html
+++ b/roster.html
@@ -56,12 +56,14 @@
                 <ul class="nav nav-tabs" role="tablist">
                     <li class="active"><a href="#mensRoster" role="tab" data-toggle="tab">Men's Roster</a></li>
                     <li><a href="#womensRoster" role="tab" data-toggle="tab">Women's Roster</a></li>
+                    <li><a href="#coaches" role="tab" data-toggle="tab">Coaches</a></li>
                 </ul>
 
                 <!-- Tab panes -->
                 <div class="tab-content">
                     <div class="tab-pane fade in active" id="mensRoster"><!-- Populated in Javascript --></div>
                     <div class="tab-pane fade" id="womensRoster"><!-- Populated in Javascript --></div>
+                    <div class="tab-pane fade" id="coaches"><!-- Populated in Javascript --></div>
                 </div>
             </div>
             <!-- /.row -->
