modified format of the dates for calendar.html. Also added the same dates to the home page "Upcoming Events"

--- a/calendar.html
+++ b/calendar.html
@@ -58,12 +58,12 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ul>
-                        <li>Guelph Fundraiser (Optional) Jan 17 @ University of Guelph</li>
-                        <li>OUA's Jan 30 - Feb 1 @ Northfield Club</li>
-                        <li>2nd West Sectional Feb 7-8 @ Western University</li>
-                        <li>Jesters Finals (Must Qualify) Feb 28 @ NSA</li>
-                        <li>Canadian University Champs (Optional) March 6-8 @ Toronto</li>
-                        <li>Athletic Banquet March 27 @ UW</li>    
+                        <li>January 17: Guelph Fundraiser @ University of Guelph (Optional)</li>
+                        <li>January 30 - February 1: OUA's @ Northfield Club</li>
+                        <li>February 7-8: West Sectional #2 @ Western University</li>
+                        <li>February 28: Jesters Finals @ NSA (Team must qualify)</li>
+                        <li>March 6-8: Canadian University Champs @ Toronto (Optional)</li>
+                        <li>March 27: Athletic Banquet @ UW (Tentative date)</li> 
                     </ul> 
                     <p>Alternately, here is a link to the google calendar: 
                         <a href="https://www.google.com/calendar/embed?src=6adv90gphmou70jmbbvqfbvvdc%40group.calendar.google.com&ctz=America%2FToronto">Google Calendar</a> 
