--- a/index.html
+++ b/index.html
@@ -81,19 +81,20 @@
                             Website Updates
                         </h4>
                         <ul>
-                            <li><a href="drillday.html">Drill</a> and <a href="matchday.html">Match</a> day schedule for October now available.</li>
-                            <li>Sample sweaters and T-shirts are with Cameron. Try them on to determine your sizing.</li>
+                            <li><a href="drillday.html">Drill</a> and <a href="matchday.html">Match</a> day schedule for January coming soon.</li>
+                            <li>Dryfit T-shirts are with Cameron. Message him to pick up.</li>
                             <li>More news...</li>
                         </ul>
                         <h4>
                             Upcoming Events 
                         </h4>
                         <ul>
-                            <li>October 18: Men's BK9 @ University of Toronto</li>
-                            <li>October 25: Women's BK9 @ University of Toronto</li>
-                            <li>October 26: Rookie Night</li>
-                            <li>October 31 - November 2: West Sectionals @ Waterloo (Northfield)</li>
-                            <li>November 16: KW Racquets Event</li>
+                            <li>January 17: Guelph Fundraiser @ University of Guelph (Optional)</li>
+                            <li>January 30 - February 1: OUA's @ Northfield Club</li>
+                            <li>February 7-8: West Sectional #2 @ Western University</li>
+                            <li>February 28: Jesters Finals @ NSA (Team must qualify)</li>
+                            <li>March 6-8: Canadian University Champs @ Toronto (Optional)</li>
+                            <li>March 27: Athletic Banquet @ UW (Tentative date)
                         </ul>
                     </div>
                 </div>
