added the link to the new drill and match day schedule. Also combined the two drill and match day pages into one page practices.html

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                             Website Updates
                         </h4>
                         <ul>
-                            <li><a href="drillday.html">Drill</a> and <a href="matchday.html">Match</a> day schedule for January coming soon.</li>
-                            <li>Dryfit T-shirts are with Cameron. Message him to pick up.</li>
+                            <li><a href="practices.html">Drill and Match</a> day schedule for January is posted!</li>
+                            <li>Dryfit T-shirts are with Hussein. Message him to pick up.</li>
                             <li>More news...</li>
                         </ul>
                         <h4>
