--- a/practices.html
+++ b/practices.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>UW Varsity Squash - Drill Day</title>
+    <title>UW Varsity Squash - Practices</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2 class="intro-text text-center">
-                        Drill Day
+                        Drill & Match Day
                     </h2>
                 </div>
             </div>
@@ -56,8 +56,13 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p>Go to this link to see the schedule:
-                        <a href="https://docs.google.com/spreadsheets/d/17KTkEiwTsPPwAV5LjT7IRC-R65GcAB7tI_WjdHeDRIg/edit?usp=sharing">Schedule</a>
+                        <a href="https://docs.google.com/spreadsheets/d/1qLPqHVVjnt1LcdfyYgoV9dBx-P9iZZa1cwaWpPBG9Yc/edit?usp=sharing">Schedule</a>
                     </p>
+
+                    <p>If you are unable to make your scheduled time you must notify your opponent and Cameron as soon as possible.</p> 
+                    <!--<p>Go to this link to see the Match Day results:
+                        <a href="https://docs.google.com/spreadsheets/d/1L17BSS3JWt5PN-zBq2Ro5id-GbQ-nF-Qi7EVRV0bYxo/edit?usp=sharing">Match Day Results</a>
+                    </p>-->
                 </div>
             </div>
             <!-- /.row -->
