Uncommented calender frame - calender updated

--- a/calendar.html
+++ b/calendar.html
@@ -71,13 +71,13 @@
                         <li>U of T BK9 and Jesters Thank-you Event dates has not yet been picked, however they will likely be somewhere in October/November</li>
                     </ul> 
                     <!-- TODO: Hussein, uncomment this code and the iframe below once you update the google cal -->
-                    <!--<p>Alternately, here is a link to the google calendar: 
+                    <p>Alternately, here is a link to the google calendar: 
                         <a href="https://www.google.com/calendar/embed?src=6adv90gphmou70jmbbvqfbvvdc%40group.calendar.google.com&ctz=America%2FToronto">Google Calendar</a> 
-                    </p>-->
+                    </p>
                 </div>
             </div>
 
-            <!--<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=6adv90gphmou70jmbbvqfbvvdc%40group.calendar.google.com&amp;color=%235F6B02&amp;ctz=America%2FToronto" style=" border-width:0 " width="100%" height="600" frameborder="0" scrolling="no"></iframe>-->
+            <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=6adv90gphmou70jmbbvqfbvvdc%40group.calendar.google.com&amp;color=%235F6B02&amp;ctz=America%2FToronto" style=" border-width:0 " width="100%" height="600" frameborder="0" scrolling="no"></iframe>
             </div>
     </div>
     <!-- /.container -->
