changed date of first west sectional

--- a/calendar.html
+++ b/calendar.html
@@ -62,7 +62,7 @@
                     <ul>
                         <li>Tuesday September 15 at 6PM: Team Meeting & Tryouts @ PAC</li>
                         <li>Sunday September 27: Team Fundraiser Tournament @ PAC</li>
-                        <li>October 3-4: Jesters Sectional #1 @ TBD</li>
+                        <li>October 17-18: Jesters Sectional #1 @ London Squash Club</li>
                         <li>November 14-15: Jesters Crossover @ NSA</li>
                         <li>January 23-24: Jesters Sectional #2 @ TBD</li>
                         <li>January 29-31: OUAs @ Niagara</li>
