Updated calendar list

--- a/calendar.html
+++ b/calendar.html
@@ -60,15 +60,13 @@
                 <div class="col-lg-12">
                     <br>
                     <ul>
-                        <li>Tuesday September 15 at 6PM: Team Meeting & Tryouts @ PAC</li>
-                        <li>Sunday September 27: Team Fundraiser Tournament @ PAC</li>
-                        <li>October 17-18: Jesters Sectional #1 @ London Squash Club</li>
-                        <li>November 14-15: Jesters Crossover @ NSA</li>
-                        <li>January 23-24: Jesters Sectional #2 @ TBD</li>
-                        <li>January 29-31: OUAs @ Niagara</li>
-                        <li>February 20: Jesters Finals @ NSA</li>
-                        <li>March 4-6: Canadian University Champs @ Toronto</li>
-                        <li>U of T BK9 and Jesters Thank-you Event dates has not yet been picked, however they will likely be somewhere in October/November</li>
+                        <li>Tuesday September 13 at 6pm: Team Meeting & Tryouts @ PAC</li>
+                        <li>West Sectional #1: October 22 - 23 @ Northfield</li>
+                        <li>Crossovers: November 19-20 @ Queens</li>
+                        <li>West Sectional #2: January 21-22 @ TBD</li>
+                        <li>Jesters Finals: February 25-26 @ Toronto</li>
+                        <li>TBD: Canadian University Champs @ TBD</li>
+                        <li>Jesters Thank-you Event date has not yet been picked, however they will likely be somewhere in October/November</li>
                     </ul> 
                     <!-- TODO: Hussein, uncomment this code and the iframe below once you update the google cal -->
                     <p>Alternately, here is a link to the google calendar: 
