--- a/contact.html
+++ b/contact.html
@@ -144,7 +144,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <p>Copyright &copy; Your Website 2014</p>
+                        <p>Copyright &copy; UW Varsity Squash 2015</p>
                     </div>
                 </div>
             </div>
