Updated calendar list for BOT 2016

--- a/calendar.html
+++ b/calendar.html
@@ -60,13 +60,16 @@
                 <div class="col-lg-12">
                     <br>
                     <ul>
-                        <li>Tuesday September 13 at 6pm: Team Meeting & Tryouts @ PAC</li>
-                        <li>West Sectional #1: October 22 - 23 @ Northfield</li>
-                        <li>Crossovers: November 19-20 @ Queens</li>
-                        <li>West Sectional #2: January 21-22 @ TBD</li>
-                        <li>Jesters Finals: February 25-26 @ Toronto</li>
-                        <li>TBD: Canadian University Champs @ TBD</li>
-                        <li>Jesters Thank-you Event date has not yet been picked, however they will likely be somewhere in October/November</li>
+                        <li>Sept 25 - UW Fundraiser Tournament</li>
+                        <li>Sept 30/Oct 1 - Northfield Cup @ Waterloo</li>
+                        <li>TBD - Visit Juniors @ Windsor</li>
+                        <li>Oct 22/23 - West Sectional 1 @ Waterloo</li>
+                        <li>TBD - Jesters KW Event @ KW Racquet Club (Kitchener)</li>
+                        <li>Nov 19/20 - Crossovers @ Queens</li>
+                        <li>Jan 14/15 - West Sectional 2 @ McMaster</li>
+                        <li>Feb 3-5 - OUAs @ Waterloo </li>
+                        <li>Mar 11/12 - Jester Finals @ Toronto</li>
+                        <li>Mar 3-5 - Canadian University & College Championships @ Waterloo</li>
                     </ul> 
                     <!-- TODO: Hussein, uncomment this code and the iframe below once you update the google cal -->
                     <p>Alternately, here is a link to the google calendar: 
