--- a/calendar.html
+++ b/calendar.html
@@ -61,7 +61,7 @@
                     <br>
                     <ul>
                         <li>Mar 18/19 - Jester Finals @ Toronto</li>
-                        <li>Mar 20/20 - Jester Pizza @ Toronto</li>
+                    <!-- NOTE: to add another date, copy and paste above and put below  
                     </ul> 
                     <!-- TODO: Hussein, uncomment this code and the iframe below once you update the google cal -->
                     <p>Alternately, here is a link to the google calendar: 
