added 2017-2018 tournament schedule

--- a/calendar.html
+++ b/calendar.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>UW Varsity Squash - Contact Us</title>
+    <title>UW Varsity Squash - Calendar</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -56,7 +56,12 @@
                 <div class="col-lg-12">
                     <br>
                     <ul>
-                        <li>Mar 18/19 - Jester Finals @ Toronto</li>
+                        <li>October 14, 2017 - Jester's Sectionals 1 @ Northfield Racquet Club</li>
+                        <li>November 4-5, 2017 - Jester's Crossovers 1 @ Queen's (overnight)</li>
+                        <li>December 2, 2017 - Jester's Sectionals 2 @ London Squash & Fitness Club</li>
+                        <li>January 13-14, 2018 - Jester's Crossovers 2 @ U of T</li>
+                        <li>February 3, 2018 - Jester's Finals @ Toronto (Cricket Club & Glendon</li>
+                        <li>February 10, 2018 - OUA @ Queen's (overnight)</li>
                         <!-- NOTE: to add another date, copy and paste above and put below -->
                     </ul> 
                     <p>Alternately, here is a link to the google calendar: 
